# openclaw-mail-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  HEARTBEAT.md  IDENTITY.md  README.md  SOUL.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
config/: accounts.yaml.example
config/filters/: _default.yaml  personal_main.yaml.example  r3dtuxedo.yaml.example  system_account.yaml.example  work_main.yaml.example
config/folder_mappings/: _example.md
cron/: crontab.example
openclaw_mail/: __init__.py  cli.py  config.py  digest.py  tidy.py
openclaw_mail/accounts/: __init__.py
openclaw_mail/calendar/: __init__.py  core.py  ics.py
openclaw_mail/filters/: __init__.py  pipeline.py
openclaw_mail/pipelines/: __init__.py  runner.py  validation.py
openclaw_mail/pr/: __init__.py  ado_client.py
openclaw_mail/utils/: __init__.py  himalaya.py  logging.py  mq.py
scripts/: consolidate_folders.py
spec/: API.md  ARCHITECTURE.md  COMMUNICATION.md  CRON.md  DATA_SCHEMA.md  LEARNINGS.md  PIPELINES.md  SAFETY.md  TESTING.md  TROUBLESHOOTING.md
spec/adrs/: ARCH-001-no-hardcoded-credentials.check.py  ARCH-001-no-hardcoded-credentials.md  ARCH-002-four-step-filter-pipeline.check.py  ARCH-002-four-step-filter-pipeline.md  ARCH-003-per-account-config-fallback.check.py  ARCH-003-per-account-config-fallback.md  (+4 more)
specs/: ARCHITECTURE.md  TESTING.md  TROUBLESHOOTING.md
tests/: conftest.py  test_calendar.py  test_cli.py  test_config.py  test_digest.py  test_himalaya.py  test_mq.py  test_pipeline.py  test_runner.py  test_tidy.py  test_validation.py
